# ESP32-P4-WIFI6-Touch-LCD-XC

./: .gitignore  README.md
examples/arduino/: README.md
examples/arduino/libraries/: lv_conf.h
examples/esp-idf/01_HowToCreateProject/: CMakeLists.txt
examples/esp-idf/02_HelloWorld/: CMakeLists.txt  pytest_hello_world.py
examples/esp-idf/03_i2c_tools/: CMakeLists.txt  partitions_example.csv  pytest_examples_i2c_tools.py  sdkconfig.defaults
examples/esp-idf/04_wifistation/: README.txt  sdkconfig.old
examples/esp-idf/05_sdmmc/: CMakeLists.txt  pytest_sdmmc_card_example.py  sdkconfig.ci  sdkconfig.defaults  sdkconfig.old
examples/esp-idf/06_I2SCodec/: CMakeLists.txt  pytest_i2s_es8311.py  sdkconfig.ci.bsp  sdkconfig.old
examples/esp-idf/07_Displaycolorbar/: sdkconfig.old
examples/esp-idf/08_lvgl_demo_v9/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.old
examples/esp-idf/09_video_lcd_display/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.old
examples/esp-idf/10_mp4_player/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  (+1 more)
examples/esp-idf/12_usb_extend_screen/main/: CMakeLists.txt  Kconfig.projbuild  app_hid.c  app_lcd_p4.c  app_touch.c  app_uac.c  app_usb.c  app_vendor.c  idf_component.yml  usb_extend_screen.c  usb_frame.c
examples/esp-idf/12_usb_extend_screen/main/include/: app_lcd.h  app_touch.h  app_usb.h  usb_frame.h
examples/esp-idf/12_usb_extend_screen/main/tusb/: tusb_config.h  tusb_config_uac.h  uac_config.h  uac_descriptors.h  usb_descriptors.c  usb_descriptors.h
(+467 files in other folders)
